--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "packages/lungo.mock"]
 	path = packages/lungo.mock
 	url = https://github.com/TapQuo/lungo.mock.git
+[submodule "packages/lungo.terminal"]
+	path = packages/lungo.terminal
+	url = https://github.com/TapQuo/lungo.terminal.git
