--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,23 @@
+[submodule "src/stylesheets/CSSmethods"]
+    path = src/stylesheets/CSSmethods
+    url = git://github.com/soyjavi/CSSmethods
+[submodule "example/components/quojs"]
+    path = example/components/quojs
+    url = git://github.com/soyjavi/package-quojs.git
+
 [submodule "packages/lungo"]
     path = packages/lungo
     url = https://github.com/tapquo/package-lungo
 [submodule "packages/lungo.theme"]
     path = packages/lungo.theme
     url = https://github.com/tapquo/package-lungo.theme
-[submodule "src/stylesheets/CSSmethods"]
-    path = src/stylesheets/CSSmethods
-    url = https://github.com/soyjavi/CSSmethods
-[submodule "example/components/quojs"]
-    path = example/components/quojs
-    url = https://github.com/soyjavi/package-quojs
+[submodule "packages/lungo.icon"]
+    path = packages/lungo.icon
+    url = https://github.com/tapquo/lungo.icon.git
+[submodule "example/components/lungo.brownie"]
+    path = example/components/lungo.brownie
+    url = https://github.com/soyjavi/lungo.brownie.git
+
 [submodule "packages/lungo.thirdparties"]
     path = packages/lungo.thirdparties
     url = https://github.com/tapquo/lungo.thirdparties.git
@@ -22,21 +30,10 @@
 [submodule "packages/lungo.language"]
     path = packages/lungo.language
     url = https://github.com/tapquo/lungo.language.git
-[submodule "packages/lungo.mock"]
-    path = packages/lungo.mock
-    url = https://github.com/tapquo/lungo.mock.git
-[submodule "packages/lungo.terminal"]
-    path = packages/lungo.terminal
-    url = https://github.com/tapquo/lungo.terminal.git
-[submodule "example/components/lungo.brownie"]
-    path = example/components/lungo.brownie
-    url = https://github.com/soyjavi/lungo.brownie.git
-[submodule "packages/lungo.icon"]
-    path = packages/lungo.icon
-    url = https://github.com/tapquo/lungo.icon.git
-[submodule "lungo.firefoxos"]
-    path = packages/lungo.firefoxos
-    url = https://github.com/tapquo/lungo.firefoxos.git
 [submodule "packages/lungo.calendar"]
     path = packages/lungo.calendar
     url = https://github.com/tapquo/lungo.calendar.git
+[submodule "lungo.firefoxos"]
+    path = packages/lungo.firefoxos
+    url = https://github.com/tapquo/lungo.firefoxos.git
+
