Add version to package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "lungo",
+  "version": "2.2.0",
   "description": "HTML5 Cross-Device Framework.",
   "homepage": "http://lungo.tapquo.com",
   "author": {
